<resources>
    <string name="app_name">Moms Cookbook</string>
    <string name="hello_blank_fragment">Dummy info</string>

    <string name="toolbar">Moms Cookbook</string>
    <string name="app_moms_cookbook">Moms Cookbook</string>
    <string name="mycookbook">My Cookbook</string>

    <!--Enter Recipe Manually      -->
    <string name="add_ingredient">Add ingredients</string>
    <string name="add_directions">Add directions</string>
    <string name="enter_ingredients">Ingredients:</string>
    <string name="enter_directions">Directions</string>
    <string name="enter_recipe_title">Title</string>
    <string name="enter_recipe_category">Categories</string>
    <string name="recipe_serving">Serving</string>
    <string name="enter_recipe_cooktime">Cooktime</string>
    <string name="recipe_notes">Notes</string>
    <string name="save_recipe_button">Save Recipe</string>

    <!--API Search Results      -->
    <string name="api_title">Title</string>
    <string name="api_sourcewebite">Website</string>
    <string name="api_servings">Servings</string>
    <string name="api_category">Category</string>
    <string name="api_time">time</string>
    <string name="app_hint_for_query">Enter search criteria</string>
    <string name="app_api_search">Search</string>
    <string name="api_readmore">To Full Recipe</string>
    <string name="api_categories">Categories:</string>
    <string name="enter_categories">Enter categories. Use a , inbetween.</string>

    <!--Navigation Drawer -->
    <string name="enter_recipe_manually">Enter Recipe Manually</string>
    <string name="enter_recipe_photo">Add Recipe from photo gallery</string>
    <string name="search">Search</string>
    <string name="name_of_app">Moms Cookbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--- View recipe from photo -->
    <string name="categories">Categories</string>
    <string name="notes">Notes</string>

    <!--- Add recipe from photo -->
    <string name="take_photo">Take Photo</string>
    <string name="find_photo">Pick Photo</string>

    <!-- Toolbar Menu -->
    <string name="menu_bookmark">Bookmark</string>
    <string name="menu_delete">Delete Recipe</string>
    <string name="menu_search_api">Search Web</string>
    <string name="menu_edit">Edit Recipe</string>

</resources>
