<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_home"
        android:title="home"
        android:icon="@drawable/ic_action_home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_bookmark"
        android:title="@string/menu_bookmark"
        android:icon="@drawable/ic_bookmark_item"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_searchapi"
        android:title="@string/menu_search_api"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_edit"
        android:title="@string/menu_edit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_delete"
        app:showAsAction="never"/>


</menu>