<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingRight="5dp"
    android:paddingLeft="5dp">

    <ImageView
        android:id="@+id/recipe_from_photo"
        android:layout_gravity="center"
        android:background="#e7e4e4"
        android:layout_width="300dp"
        android:layout_height="300dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/take_photo"
        android:text="@string/take_photo"
        android:elevation="3dp"
        android:layout_width="0dp"
        android:background="#ffffff"
        android:textColor="#193379"
        android:layout_height="wrap_content"
        android:layout_weight=".50"/>

    <Button
        android:id="@+id/find_photo"
        android:text="@string/find_photo"
        android:elevation="3dp"
        android:layout_width="0dp"
        android:background="#ffffff"
        android:textColor="#193379"
        android:layout_height="wrap_content"
        android:layout_weight=".50"/>

    </LinearLayout>

    <EditText
        android:id="@+id/photo_recipe_title"
        android:hint="@string/api_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/photo_recipe_categories"
        android:hint="@string/api_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/photo_recipe_notes"
        android:hint="@string/recipe_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/photo_recipe_save"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:padding="15dp"
        android:text="@string/save_recipe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>