<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
                android:padding="5dp"
    android:id="@+id/api_searchresultrecipe_layout">

    <ImageView
        android:id="@+id/api_recipe_image"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:paddingRight="5dp"
        android:background="#de8484"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintRight_toLeftOf="@+id/api_recipe_category"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.333"
        tools:layout_editor_absoluteY="8dp"
        app:layout_constraintVertical_bias="0.363"/>

    <TextView
        android:id="@+id/api_recipe_title"
        android:text="@string/api_title"
        android:layout_toRightOf="@id/api_recipe_image"
        android:layout_width="29dp"
        android:layout_height="17dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/api_recipe_category"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="236dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/api_recipe_category"
        app:layout_constraintHorizontal_bias="0.125"/>

    <TextView
        android:id="@+id/api_recipe_source_website"
        android:text="@string/api_sourcewebite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="206dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/api_recipe_category"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:id="@+id/api_recipe_category"
        android:text="@string/api_category"
        android:layout_width="55dp"
        android:layout_height="20dp"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/api_recipe_source_website"
        android:layout_marginRight="205dp"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/api_recipe_servings"
        android:text="@string/api_servings"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/api_recipe_time"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/api_recipe_time"
        android:text="@string/api_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="254dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/api_recipe_servings"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        app:layout_constraintHorizontal_bias="0.888"/>

</android.support.constraint.ConstraintLayout>